--- a/packages/collector/package.json
+++ b/packages/collector/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@instana-collector-node-winston",
+  "name": "instana-collector-node-winston",
   "version": "2.20.1",
   "description": "Forked version of The Instana Node.js metrics and trace data collector to add winston logger info logs",
   "author": {
